fix css for overflow of menu pages

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 header,
 .menu-header {
-  position: relative;
+  position: fixed;
   background-color: var(--header-color);
   color: #ffffff;
   width: 100%;
@@ -19,6 +19,7 @@ header,
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .header-title,
@@ -35,7 +36,7 @@ header,
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 90;
+  z-index: 3;
   background-color: var(--header-color);
 }
 
@@ -77,6 +78,12 @@ header,
   display: none;
 }
 
+.hamburger-menu {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 .menu-header {
   border-bottom: solid 1px rgba(255, 255, 255, 0.5);
 }
@@ -86,13 +93,18 @@ header,
   height: 100%;
   position: fixed;
   top: 0;
-  left: 0;
-  z-index: 80;
+  left: 100%;
+  z-index: 2;
   background-color: var(--header-color);
+  transition: all 0.5s;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-content ul {
-  padding: 0 0 10px 20px;
+  padding: 50px 0 10px 20px;
+  flex-grow: 1;
 }
 
 .menu-content ul li {
@@ -137,27 +149,14 @@ header,
   transform: rotate(135deg);
 }
 
-.menu-content {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 100%;
-  z-index: 80;
-  background-color: var(--header-color);
-  transition: all 0.5s;
-}
-
 #menu-btn-check:checked~.menu-content {
   left: 0;
 }
 
 .menu-footer {
   width: 100%;
-  height: inherit;
   color: black;
   background-color: #ffffff;
-  flex-grow: 1;
 }
 
 .menu-footer .social-icons {
@@ -218,5 +217,5 @@ header,
 
 .menu-footer .copy-right {
   font-size: 10px;
-  padding: 0px 20px;
+  padding: 0 20px 20px;
 }
